--- a/nutanix_users.yml
+++ b/nutanix_users.yml
@@ -26,7 +26,7 @@
         update_prism_admin_str: 'dpp/data/nutanix/prism/element:username'
         update_prism_password_str: 'dpp/data/nutanix/prism/element:password'
       delegate_to: localhost
-      when: "central" not in prism_url 
+      when: '"central" not in prism_url '
 
     - name: Set facts
       ansible.builtin.set_fact:
