--- a/nutanix_users.yml
+++ b/nutanix_users.yml
@@ -1,8 +1,8 @@
 ---
 - name: get info prism central
-#  hosts: all 
-  hosts: localhost
-  connection: local 
+  hosts: all 
+#  hosts: localhost
+#  connection: local 
   gather_facts: true
 
 
