--- a/nutanix_users.yml
+++ b/nutanix_users.yml
@@ -25,7 +25,7 @@
       ansible.builtin.set_fact:
         update_prism_admin_str: 'dpp/data/nutanix/prism/element:username'
         update_prism_password_str: 'dpp/data/nutanix/prism/element:password'
-      delegate_to: localhost
+#      delegate_to: localhost
       when: '"central" not in prism_url '
 
     - name: Set facts
@@ -34,7 +34,7 @@
         prism_password: "{{ lookup('community.general.hashi_vault',  update_prism_password_str + ' ' + hv_credential_string) }}"
         userslist: "{{ lookup('community.general.hashi_vault',  update_prism_userslist_str + ' ' + hv_credential_string) }}"
       no_log: true
-      delegate_to: localhost
+#      delegate_to: localhost
 
 #    - name: include vars and vault for env
 #      include_vars: "{{ item }}.yml"
@@ -62,7 +62,7 @@
         status_code: 200
         return_content: true
       register: login
-      delegate_to: localhost
+#      delegate_to: localhost
       no_log: true
 
     - name: Sets fact for session cookie
