--- a/nutanix_users.yml
+++ b/nutanix_users.yml
@@ -30,9 +30,9 @@
     - name: Set facts
       ansible.builtin.set_fact:
         prism_user: "{{ lookup('community.general.hashi_vault',  update_prism_admin_str + ' ' + hv_credential_string ) }}"
-#        prism_password: "{{ lookup('community.general.hashi_vault',  update_prism_password_str + ' ' + hv_credential_string) }}"
-#        userslist: "{{ lookup('community.general.hashi_vault',  update_prism_userslist_str + ' ' + hv_credential_string) }}"
-#      no_log: true
+        prism_password: "{{ lookup('community.general.hashi_vault',  update_prism_password_str + ' ' + hv_credential_string) }}"
+        userslist: "{{ lookup('community.general.hashi_vault',  update_prism_userslist_str + ' ' + hv_credential_string) }}"
+      no_log: true
 
 
   tags:
@@ -51,11 +51,11 @@
         force_basic_auth: true
         body_format: json
         user: "{{ prism_user }}"
-        password: "{{ prism_password }}"
+#        password: "{{ prism_password }}"
         status_code: 200
         return_content: true
       register: login
-      no_log: true
+#      no_log: true
 
     - name: Sets fact for session cookie
       set_fact:
