--- a/nutanix_users.yml
+++ b/nutanix_users.yml
@@ -27,18 +27,27 @@
         update_prism_password_str: 'dpp/data/nutanix/prism/element:password'
       when: '"central" not in prism_url '
 
-    - name: Set facts
-      ansible.builtin.set_fact:
-        prism_user: "{{ lookup('community.general.hashi_vault',  update_prism_admin_str + ' ' + hv_credential_string ) }}"
-        prism_password: "{{ lookup('community.general.hashi_vault',  update_prism_password_str + ' ' + hv_credential_string) }}"
-#        userslist: "{{ lookup('community.general.hashi_vault',  update_prism_userslist_str + ' ' + hv_credential_string) }}"
-      no_log: true
+#    - name: Set facts
+#      ansible.builtin.set_fact:
+#        prism_user: "{{ lookup('community.general.hashi_vault',  update_prism_admin_str + ' ' + hv_credential_string ) }}"
+#        prism_password: "{{ lookup('community.general.hashi_vault',  update_prism_password_str + ' ' + hv_credential_string) }}"
+##        userslist: "{{ lookup('community.general.hashi_vault',  update_prism_userslist_str + ' ' + hv_credential_string) }}"
+#      no_log: true
 
 
   tags:
     - debugs
 
   tasks:
+
+
+    - name: Set facts
+      ansible.builtin.set_fact:
+        prism_user: "{{ lookup('community.general.hashi_vault',  update_prism_admin_str + ' ' + hv_credential_string ) }}"
+        prism_password: "{{ lookup('community.general.hashi_vault',  update_prism_password_str + ' ' + hv_credential_string) }}"
+        userslist: "{{ lookup('community.general.hashi_vault',  update_prism_userslist_str + ' ' + hv_credential_string) }}"
+      no_log: true
+
     - name: show info
       debug:
         msg: "{{ prism_user }} {{ env }} {{ prism_url }}"
